# llmstart_homework_ilya

./: .dockerignore  .env  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
.cursor/rules/: conventions.mdc  workflow.mdc
bot/: __init__.py  handlers.py
doc/: botfather_setup.md  product_idea.md  tasklist.md  vision.md
llm/: __init__.py  client.py
tests/: __init__.py  test_bot.py  test_llm.py
